bert-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bert-qa
  labels:
    app: triton-server
spec:
  selector:
    matchLabels:
      app: triton-server
  replicas: 2
  template:
    metadata:
      labels:
        app: triton-server
    spec:
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-tesla-t4
      volumes:
      - name: model-repo
        persistentVolumeClaim:
          claimName: llm-pvc
      containers:
      - name: serving
        image:  nvcr.io/nvidia/tritonserver:24.03-py3  #nvcr.io/nvaie/tritonserver-<NVAIE-MAJOR-VERSION>:<NVAIE-CONTAINER-TAG>
        ports:
        - name: grpc
          containerPort: 8001
        - name: http
          containerPort: 8000
        - name: metrics
          containerPort: 8002
        volumeMounts:
        - name: model-repo
          mountPath: "/models"
        resources:
          limits:
            nvidia.com/gpu: 1
        command: ["tritonserver", "--model-store=/models"]
