vllm-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-client
spec:
  selector:
    matchLabels:
      app: vllm-client
  template:
    metadata:
      labels:
        app: vllm-client
    spec:
      containers:
      - name: gradio
        image: us-east1-docker.pkg.dev/rick-vertex-ai/gke-llm/vllm-client:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 7860
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-client-service
spec:
  type: LoadBalancer
  selector:
    app: vllm-client
  ports:
  - port: 8080
    targetPort: 7860
